# autogkb-monorepo

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json
data/: all_pmids.txt  benchmark_annotations.json  pmcid_mapping.json
data/backups/: generations_20260309_233035.jsonl
data/benchmark_v2/: generate_summary_bench.py  summary_bench.jsonl
data/generations/: 20260309_155016_PMC10275785.md  20260309_155016_PMC10399933.md  20260309_155016_PMC10786722.md  20260309_155016_PMC10880264.md  20260309_155016_PMC10946077.md  20260309_155016_PMC10993165.md  20260309_155016_PMC11062152.md  20260309_155016_PMC11430164.md  20260309_155016_PMC11603346.md  20260309_155016_PMC11971672.md  20260309_155016_PMC12035587.md  20260309_155016_PMC12036300.md  20260309_155016_PMC12038368.md  20260309_155016_PMC12319246.md  20260309_155016_PMC12331468.md  20260309_155016_PMC2859392.md  20260309_155016_PMC3113609.md  20260309_155016_PMC3387531.md  20260309_155016_PMC3548984.md  20260309_155016_PMC3584248.md  20260309_155016_PMC3839910.md  20260309_155016_PMC384715.md  20260309_155016_PMC4706412.md  20260309_155016_PMC4916189.md  20260309_155016_PMC5074472.md  20260309_155016_PMC5508045.md  20260309_155016_PMC554812.md  20260309_155016_PMC5561238.md  20260309_155016_PMC6435416.md  (+70 more)
shared/: pyproject.toml
shared/shared/: __init__.py  utils.py
shared/shared/data_setup/: article_markdown_downloader.py  download_article.py  group_summary.py  main.py  pmc_title_fetcher.py  pmcid_converter.py  term_lookup_data.py
shared/shared/term_normalization/: README.md  __init__.py
(+26 files in other folders)
