[project]
name = "autogkb"
version = "0.1.0"
description = "AutoGKB monorepo - pharmacogenomics knowledge extraction"
requires-python = ">=3.11"
dependencies = [
    "autogkb-shared",
    "autogkb-pipeline",
    "autogkb-benchmark",
    "autogkb-api",
]

[tool.uv.workspace]
members = ["packages/pipeline", "packages/benchmark", "packages/api", "shared"]

[tool.uv.sources]
autogkb-shared = { workspace = true }
autogkb-pipeline = { workspace = true }
autogkb-benchmark = { workspace = true }
autogkb-api = { workspace = true }

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
]
