[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogkb-shared"
version = "0.1.0"
description = "Shared utilities for AutoGKB packages"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.72.0",
    "loguru>=0.7.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.0",
    "pubmed-markdown>=0.2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]
